@@ -1,16 +1,16 @@
 package com.ucp.tetris.Piece;
 
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 
 public class Stick extends PieceBase {
 
   public Stick(String symbol) {
-        setShape (new ArrayList<>(List.of(
-            List.of(symbol),
-            List.of(symbol),
-            List.of(symbol),
-            List.of(symbol))));
+        setShape (new ArrayList<>(Arrays.asList(
+            Arrays.asList(symbol),
+            Arrays.asList(symbol),
+            Arrays.asList(symbol),
+            Arrays.asList(symbol))));
     }
 
 
